fixed misaligned bubbles

--- a/src/styles/initial/ic-shapes.css
+++ b/src/styles/initial/ic-shapes.css
@@ -70,7 +70,7 @@
 	overflow:					hidden;
 	white-space: 				nowrap;
 	text-overflow:				ellipsis;
-	align-items:				center;
+	align-items:				baseline;
 }
 
 
